# CANParse

./: README.md  pyproject.toml  requirements.txt
canparse/: parse.py
